[package]
name = "pulsectl2-rs"
version = "0.3.3"
authors = ["Mateusz Mikuła <oss@mateuszmikula.dev>", "Kristopher Ruzic <krruzic@gmail.com>"]
description = "A higher level API for libpulse-binding"
homepage = "https://github.com/mati865/pulsectl2-rs"
documentation = "https://docs.rs/pulsectl2-rs"
repository = "https://github.com/mati865/pulsectl2-rs"
keywords = ["pulse", "pulseaudio", "binding", "audio", "api"]
categories = ["api-bindings", "multimedia::audio"]
readme = "README.md"
license = "GPL-3.0-or-later"
exclude = ["/.github/*"]
edition = "2018"

[lib]
name = "pulsectl"

[dependencies.pulse]
package = "libpulse-binding"
version = "2.24.0"
